# google-calendar

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  docker.sh  requirements.txt
notebook/: calendar_api.ipynb  token.json
src/: app.py  calendar_api.py  calendar_api2.py
